--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -44,6 +44,13 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+                    android:paddingRight="16dp"
+                    android:text="@string/app_name"/>
+
             </android.support.v7.widget.Toolbar>
             <!--android:background="?attr/colorPrimary"-->
 
@@ -102,7 +109,7 @@
         app:layout_toEndOf="@+id/wifi"
         tools:ignore="RtlHardcoded"
         tools:targetApi="honeycomb"
-        android:tag="@string/app_name"
+        android:tag="Android"
         android:visibility="visible">
 
         <!--app:showAnimation="@animator/translation_show"-->
